# calendar-analyzer

./: .coderabbit.yml  .gitignore  .rumdl.toml  AGENTS.md  LICENSE  README.md  SECURITY.md  calendar_analyzer.py  cspell.json  justfile  pyproject.toml  requirements.txt  semgrep.yaml  typos.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bandit.yml  ci.yml  codecov.yml  codeql.yml  pylint.yml
scripts/: README.md  setup-macos.sh  setup-windows.ps1
tests/: __init__.py  test_calendar_analyzer.py
