[project]
name = "calendar-analyzer"
version = "0.1.0"
authors = [
    {name = "Adam Getchell", email = "your-email@example.com"}
]
license = {text = "MIT"}
keywords = ["calendar", "analysis", "productivity", "meeting-summary"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
description = "A Python script that analyzes your Apple Calendar data and provides a summary of your meetings"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "icalendar>=6.3.1",
    "pandas>=2.3.0",
    "python-dateutil>=2.9.0",
]

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "isort>=6.0.1",
    "pytest>=8.2.1",
    "pytest-cov>=6.2.1",
    "bandit>=1.8.5",
]

[tool.bandit]
# Skip assert_used (B101) warnings in test files since assertions are expected in tests
skips = ["B101"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
